New Font Added and Buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <img src="img/logo.png" id = "logo">
+	<header>
+		<img src="img/logo.png" id = "logo">
+		<nav>
+			<a href="#">Inicio</a>
+			<a href="#">Acerca De</a>
+			<a href="#">Discografía</a>
+			<a href="#">Integrantes</a>
+			<a href="#">Redes Sociales</a>
+		</nav>
+	</header>
 </body>
 </html>
