--- a/index.html
+++ b/index.html
@@ -4,19 +4,44 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="js/main.js"></script>
-  <title>Document</title>
+  <title>Rupatrupa</title>
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<header>
 		<img src="img/logo.png" id = "logo">
 		<nav>
-			<a href="#">Inicio</a>
-			<a href="#">Acerca De</a>
-			<a href="#">Discografía</a>
-			<a href="#">Integrantes</a>
-			<a href="#">Redes Sociales</a>
+			<a href="#1" id="incio" class="btn">Inicio</a>
+			<a href="#2" id="acerca_de" class="btn">Acerca De</a>
+			<a href="#3" id="discografia" class="btn">Discografía</a>
+			<a href="#4" id="integrantes" class="btn">Integrantes</a>
+			<a href="#5" id="redes_sociles" class="btn">Redes Sociales</a>
 		</nav>
 	</header>
+	<section id="seccion1">
+		<section>
+			
+		</section>
+	</section>
+	<section id="seccion2">
+		<section>
+			
+		</section>
+	</section>
+	<section id="seccion3">
+		<section>
+			
+		</section>
+	</section>
+	<section id="seccion4">
+		<section>
+			
+		</section>
+	</section>
+	<section id="seccion5">
+		<section>
+			
+		</section>
+	</section>
 </body>
 </html>
