--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
 	</header>
 	<section id="seccion1">
 		<section>
-			
+			<h1>Hola Mundo</h1>
 		</section>
 	</section>
 	<section id="seccion2">
 		<section>
-			
+			<h1>Hola Mundo</h1>
 		</section>
 	</section>
 	<section id="seccion3">
 		<section>
-			
+			<h1>Hola Mundo</h1>
 		</section>
 	</section>
 	<section id="seccion4">
 		<section>
-			
+			<h1>Hola Mundo</h1>
 		</section>
 	</section>
 	<section id="seccion5">
 		<section>
-			
+			<h1>Hola Mundo</h1>
 		</section>
 	</section>
 </body>
