Buttons's functions and Scroll

--- a/index.html
+++ b/index.html
@@ -11,36 +11,36 @@
 	<header>
 		<img src="img/logo.png" id = "logo">
 		<nav>
-			<a href="#1" id="incio" class="btn">Inicio</a>
-			<a href="#2" id="acerca_de" class="btn">Acerca De</a>
-			<a href="#3" id="discografia" class="btn">Discografía</a>
-			<a href="#4" id="integrantes" class="btn">Integrantes</a>
-			<a href="#5" id="redes_sociles" class="btn">Redes Sociales</a>
+			<a href="#seccion1" id="incio" class="btn">Inicio</a>
+			<a href="#seccion2" id="acerca_de" class="btn">Acerca De</a>
+			<a href="#seccion3" id="discografia" class="btn">Discografía</a>
+			<a href="#seccion4" id="integrantes" class="btn">Integrantes</a>
+			<a href="#seccion5" id="redes_sociles" class="btn">Redes Sociales</a>
 		</nav>
 	</header>
-	<section id="seccion1">
+	<section class="seccion">
 		<section>
-			<h1>Hola Mundo</h1>
+			<h1 id="seccion1">Hola Mundo</h1>
 		</section>
 	</section>
-	<section id="seccion2">
+	<section class="seccion">
 		<section>
-			<h1>Hola Mundo</h1>
+			<h1 id="seccion2">Hola Mundo</h1>
 		</section>
 	</section>
-	<section id="seccion3">
+	<section class="seccion">
 		<section>
-			<h1>Hola Mundo</h1>
+			<h1 id="seccion3">Hola Mundo</h1>
 		</section>
 	</section>
-	<section id="seccion4">
+	<section class="seccion">
 		<section>
-			<h1>Hola Mundo</h1>
+			<h1 id="seccion4">Hola Mundo</h1>
 		</section>
 	</section>
-	<section id="seccion5">
+	<section class="seccion">
 		<section>
-			<h1>Hola Mundo</h1>
+			<h1 id="seccion5">Hola Mundo</h1>
 		</section>
 	</section>
 </body>
