--- a/index.html
+++ b/index.html
@@ -20,27 +20,46 @@
 	</header>
 	<section class="seccion">
 		<section>
-			<h1 id="seccion1">Hola Mundo</h1>
+			<h1 id="seccion1">
+				<img src="img/img3.jpg" alt="imagen 3">
+			</h1>
 		</section>
 	</section>
 	<section class="seccion">
 		<section>
-			<h1 id="seccion2">Hola Mundo</h1>
+			<h1 id="seccion2">Acerca de</h1>
+			<p>
+				Rupatrupa es una banda fundada en el 2015 por roberto gonzales, nadir sigolo y mathias burgos, ellos mismos definen su estilo de musica como música callejera, Se utilizan ritmos muy conocidos, como la rumba o el reggae, pero llevando siempre cualquier estilo hacia un terreno propio. Las canciones se caracterizan por su sencillez y por la sinceridad de sus letras, las cuales pueden considerarse pedacitos de la vida de su autor (roberto gonzalez). 
+			</p>
 		</section>
 	</section>
 	<section class="seccion">
 		<section>
-			<h1 id="seccion3">Hola Mundo</h1>
+			<h1 id="seccion3">Discografía</h1>
+			<p>Directo en el cuartito de la lavadora es el primer album lanzado por rupatrupa en 2016 , este fue creado fue realizada en el cuarto de la lavadora de Mathias, y era un “directo” sin publico así todas las versiones que suenan en el disco fueron atrapadas a la primera toma. Esto deja ver muchos errores, pero también hace que se pueda preservar la magia que sintieron los tres al tocar juntos. <br>
+
+				Luego de esto sacaron algunos sencillos como a susurros suaves y odio al ser humano,  
+				
+				En 2020 decidieron sacar un EP llamado a Solas el cual posee 6 canciones estos temas muestran la mínima expresión de Rupatrupa, donde la voz de Roberto Ruido está acompañada únicamente por el sonido de su guitarra, y arropada de vez en cuando por su silbar. A solas recoge temas grabados de forma casera por el propio artista durante el confinamiento. Sin duda, esta es la muestra más íntima y cruda de lo que significa este proyecto. <br>
+				
+				Y por último Directo en Sdma su álbum más famoso y reconocido que sacaron en 2017, tiene canciones tan icónicas como humo, rara bien y camino de tu ombligo. </p>
 		</section>
 	</section>
 	<section class="seccion">
 		<section>
-			<h1 id="seccion4">Hola Mundo</h1>
+			<h1 id="seccion4">Integrantes</h1>
+			<p>
+				Este proyecto está integrado por Roberto Ruido (guitarra, voz y percusión con los pies), completadas y mejoradas por Nadir Sigolo (acordeón) y Mathias Burgos-Villa (saxo y flauta travesera).  
+
+				Su mezcla interesante y llamativa de ritmos se debe a que las canciones son escritas por un madrileño (Roberto), acompañadas por un italiano de Milán (Nadir) y un francés de Montpellier (Mathias). Algunas canciones nacieron en Madrid, hace muchos años, otras en Melilla, y las últimas en Tenerife. <br>
+
+				La coincidencia hizo que los tres músicos se encontraran en Tenerife a finales del 2014, y empezaran enseguida a trabajar sobre un proyecto nacido por y para la calle, que ahora busca expandirse a todos los territorios posibles. 
+			</p>
 		</section>
 	</section>
 	<section class="seccion">
 		<section>
-			<h1 id="seccion5">Hola Mundo</h1>
+			<h1 id="seccion5">Redes Sociales</h1>
 		</section>
 	</section>
 </body>
