Organizacion de contenido

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
 			</div>	
 			<div>
 				<h1 id="seccion5">Redes Sociales</h1>
+				<a href=""></a>
+				<A HREF="https://www.youtube.com/channel/UCdRBToEnnUung-5VRuxs5gw"> link youtube </A>
+				<a href="https://www.instagram.com/rupatrupa/">link instagram</a>	
+				<a href="https://www.facebook.com/robertoruido">link facebook</a>
+				<a href="https://open.spotify.com/artist/4NMzrymQlZzpXs0LT3Arei?si=WOCD9tnzR2Gpx6Xsy4LePA">link spotify</a>
 			</div>
 	</div>
 </body>
