centrado de links, letra blanca en fondo cafe

--- a/index.html
+++ b/index.html
@@ -27,9 +27,17 @@
 			</div>
 			<div id="seccion2">
 				<h1>Acerca de</h1>
-				<p>
-					Rupatrupa es una banda fundada en el 2015 por roberto gonzales, nadir sigolo y mathias burgos, ellos mismos definen su estilo de musica como música callejera, Se utilizan ritmos muy conocidos, como la rumba o el reggae, pero llevando siempre cualquier estilo hacia un terreno propio. Las canciones se caracterizan por su sencillez y por la sinceridad de sus letras, las cuales pueden considerarse pedacitos de la vida de su autor (roberto gonzalez). 
-				</p>
+				<div class="imagenes">
+					<div>
+						<p>
+							Rupatrupa es una banda fundada en el 2015 por roberto gonzales, nadir sigolo y mathias burgos, ellos mismos definen su estilo de musica como música callejera, Se utilizan ritmos muy conocidos, como la rumba o el reggae, pero llevando siempre cualquier estilo hacia un terreno propio. Las canciones se caracterizan por su sencillez y por la sinceridad de sus letras, las cuales pueden considerarse pedacitos de la vida de su autor (roberto gonzalez). 
+						</p>
+					</div>
+					<div>
+						<img src="img/img2.jpg" alt="imagen2">
+					</div>
+				</div>
+				
 			</div>
 			<div>
 				<h1 id="seccion3">Discografía</h1>
@@ -53,11 +61,17 @@
 			</div>	
 			<div>
 				<h1 id="seccion5">Redes Sociales</h1>
+				<div class="links">
 				<a href=""></a>
 				<A HREF="https://www.youtube.com/channel/UCdRBToEnnUung-5VRuxs5gw"> link youtube </A>
+				<br>
 				<a href="https://www.instagram.com/rupatrupa/">link instagram</a>	
+				<br>
 				<a href="https://www.facebook.com/robertoruido">link facebook</a>
+				<br>
 				<a href="https://open.spotify.com/artist/4NMzrymQlZzpXs0LT3Arei?si=WOCD9tnzR2Gpx6Xsy4LePA">link spotify</a>
+
+				</div>
 			</div>
 	</div>
 </body>
