--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 
     <main>
         <div class="container">
-            <article class="section inicio">
+            <article class="section inicio" id="seccion1">
                 <img src="img/img3.jpg" alt="Imagen de un cantante">
             </article>
-            <article class="section">
+            <article class="section" id="seccion2">
                 <div>
                     <h1>Acerca de</h1>
                     <p>
@@ -38,12 +38,12 @@
                 </div>
                 
             </article>
-            <article class="section">
+            <article class="section" id="seccion3">
                 <div>
                     <img class="content-image" src="img/img3.jpg" alt="Imagen de un cantante">
                 </div>
                 <div>
-                    <h1 id="seccion3">Discografía</h1>
+                    <h1>Discografía</h1>
                     <p>Directo en el cuartito de la lavadora es el primer album lanzado por rupatrupa en 2016 , este fue creado fue realizada en el cuarto de la lavadora de Mathias, y era un “directo” sin publico así todas las versiones que suenan en el disco fueron atrapadas a la primera toma. Esto deja ver muchos errores, pero también hace que se pueda preservar la magia que sintieron los tres al tocar juntos. <br>
 
                         Luego de esto sacaron algunos sencillos como a susurros suaves y odio al ser humano,  
@@ -55,7 +55,7 @@
                 </div>
                 
             </article>
-            <article class="section">
+            <article class="section" id="seccion4">
                 <h1>Integrantes</h1>
 				<p>
 					Este proyecto está integrado por Roberto Ruido (guitarra, voz y percusión con los pies), completadas y mejoradas por Nadir Sigolo (acordeón) y Mathias Burgos-Villa (saxo y flauta travesera).  
